2014-10-17  Roland McGrath  <roland@hack.frob.com>

	* nptl/nptl-init.c (sighandler_setxid, __xidcmd): Make definitions
	conditional on [SIGSETXID].
	(sigcancel_handler): Make definition conditional on [SIGCANCEL].
	(__pthread_initialize_minimal_internal): Set up SIGCANCEL only if it
	is defined.  Likewise for SIGSETXID.
	* nptl/allocatestack.c (setxid_mark_thread, setxid_unmark_thread):
	Conditionalize definitions on [SIGSETXID].
	(setxid_signal_thread, __nptl_setxid_error, __nptl_setxid): Likewise.
	* nptl/pthread_create.c (start_thread): Conditionalize SIGCANCEL
	unblocking on [SIGCANCEL].

	* nptl/nptl-init.c (__nptl_set_robust): Conditionalize body on
	[__NR_set_robust_list].

2014-10-17  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* string/strcoll_l.c (get_next_seq): Fix up formatting.
	(do_compare): Likewise.

2014-10-17  Leonhard Holz  <leonhard.holz@web.de>

	[BZ #15884]
	* string/strcoll_l.c: Don't include stdio.h.
	(coll_seq): Remove members idxarr and rulearr.
	(get_next_seq_cached): Remove function.
	(get_next_seq): Likewise.
	(get_next_seq_nocache): Rename to get_next_seq.
	(do_compare): Remove function.
	(do_compare_nocache): Rename to do_compare.
	(STRCOLL): Remove weight and rules cache.

2014-10-16  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/arm/soft-fp/sfp-machine.h: Filed moved ...
	* sysdeps/arm/sfp-machine.h: ... to here.
	* sysdeps/arm/Implies: Remove arm/soft-fp.

2014-10-14  Joseph Myers  <joseph@codesourcery.com>

	* conform/data/sys/utsname.h-data (*_t): Allow.
	* conform/data/sys/wait.h-data [POSIX] (uid_t): Do not define.
	[POSIX] (WEXITED): Do not expect constant.
	[POSIX] (WSTOPPED): Likewise.
	[POSIX] (WNOHANG): Likewise.
	[POSIX] (WNOWAIT): Likewise.
	[POSIX] (siginfo_t): Do not expect type or elements.
	[POSIX] (pid_t): Do not expect type.
	[POSIX] (signal.h): Do not allow header.
	[POSIX] (sys/resource.h): Likewise.
	[POSIX] (si_*): Do not allow pattern.
	[POSIX] (W*): Likewise.
	[POSIX] (P_*): Likewise.